<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView style="@style/NoInternetImageView"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                style="@style/ErrorTextView"
                android:text="@string/noNetworkErrorHeader"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>
            <TextView
                style="@style/ErrorTextView"
                android:text="@string/noNetworkErrorDescription"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>
                <Button
                    android:id="@+id/retrySearchButton"
                    android:text="@string/refresh"
                    style="@style/SmallRoundButton"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>