<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:background="@color/bg_primary"        >

        <!-- App page header -->
        <LinearLayout
            style="@style/PageHeaderContainer"
            >

            <!-- Header button -->
            <ImageButton
                style="@style/PageHeaderButton"
                android:src="@drawable/arrow_back"
                android:id="@+id/backBtn"
                />

            <!-- Header Text -->
            <TextView
                style="@style/PageHeaderText"
                android:text="@string/search"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Content">
        <LinearLayout

            style="@style/TextInputWrapper"
            android:orientation="horizontal"
            >

            <ImageView
                style="@style/TextInputWrapperIcon"
                android:src="@drawable/search"
                />

            <EditText
                android:id="@+id/searchField"
                style="@style/EditText"
                android:imeOptions="actionDone"
                android:hint="@string/search"/>

            <ImageView
                android:id="@+id/clearSearchFieldBtn"
                style="@style/TextInputWrapperIcon"
                android:src="@drawable/clear"
                android:visibility="gone"
                />

        </LinearLayout>
            <LinearLayout
                android:id="@+id/searchHistoryWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youSearched"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ys_display_bold"
                    android:textColor="@color/fg_primary"
                    android:textSize="18sp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/searchHistoryList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="20dp">
                </androidx.recyclerview.widget.RecyclerView>
                <Button
                    android:id="@+id/clearHistoryButton"
                    android:text="@string/clearSearchHistory"
                    style="@style/SmallRoundButton">
                </Button>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:visibility="gone"
                >
            </androidx.recyclerview.widget.RecyclerView>
            <include
                android:id="@+id/notFoundWidget"
                layout="@layout/no_results"
                android:visibility="gone"
                />
            <include
                android:id="@+id/noInternetWidget"
                layout="@layout/no_connection"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>